// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should CityItem render correctly Active 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item tabs__item--active"
    href="#"
    onClick={[Function]}
  >
    <span>
      London
    </span>
  </a>
</li>
`;

exports[`Should CityItem render correctly Not active 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    href="#"
    onClick={[Function]}
  >
    <span>
      London
    </span>
  </a>
</li>
`;
